--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1,
             shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content />
+        <meta name="author" content />
         <title>OHSmedia</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -54,9 +54,13 @@
             <!-- Projects-->
             <section class="projects-section bg-black" id="about">
                 <!-- Featured Project Row-->
-                <div class="container px-4 px-lg-5">
+                <div class="container">
                     <div class="row gx-4 gx-lg-5 justify-content-center">
-                        <div class="col-lg-8">
+                        <div class="col col-lg-1">
+                            <div class="verticalLine"></div>
+                        </div>
+
+                        <div class="col">
                             <h2 class="text-white mb-4">ABOUT US</h2>
                             <p class="text-white-50">
                                 We are a digital marketing agency who specialize
@@ -65,16 +69,15 @@
                                 we can help you achieve your goals.
                             </p>
                         </div>
+
                     </div>
                 </div>
             </section>
             <!-- Signup-->
             <section class="signup-section" id="signup">
-                <div class="container px-4 px-lg-5">
-                    <div class="row gx-4 gx-lg-5 justify-content-center">
-                        <div class="col-lg-8">
-                            <h2 class="text-white mb-4">BOOK A ZOOM MEETING</h2>
-                        </div>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <u><h2 class="text-white mb-4 text-center ">CONTACT US</h2></u>
                     </div>
                 </div>
                 <!-- Calendly inline widget begin -->
@@ -98,4 +101,12 @@
             <script src="js/scripts.js"></script>
             <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
         </body>
+
+        <style>
+            .verticalLine {
+              border-left: 4px solid #ffffff82;
+              height: 200px;
+            }
+          </style>
+
     </html>
