--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1,
             shrink-to-fit=no" />
-        <meta name="description" content />
-        <meta name="author" content />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
         <title>OHSmedia</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-lg navbar-light fixed-top"
             id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top">OHS</a>
+                <a class="navbar-brand" href="#page-top"><img src="assets/logo_clear.png" style="width: 80px;"></a>
                 <button class="navbar-toggler navbar-toggler-right"
                     type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarResponsive"
@@ -50,17 +50,17 @@
                     class="OHSLogoVideo">
                     <source src="assets/video.mp4" type="video/mp4">
                 </center>
+                <div class="container" style="height: 200px"> </div>
             </header>
             <!-- Projects-->
-            <section class="projects-section bg-black" id="about">
+            <section class="projects-section" style="background-color: grey;" id="about">
                 <!-- Featured Project Row-->
-                <div class="container">
+                <div class="container px-4 px-lg-5">
                     <div class="row gx-4 gx-lg-5 justify-content-center">
-                        <div class="col col-lg-1">
-                            <div class="verticalLine"></div>
+                        <div class="col-md-6 ">
+                            <img src="assets/logo.jpg" class="img-thumbnail" style="margin-bottom: 50px;">
                         </div>
-
-                        <div class="col">
+                        <div class="col-md-6">
                             <h2 class="text-white mb-4">ABOUT US</h2>
                             <p class="text-white-50">
                                 We are a digital marketing agency who specialize
@@ -69,25 +69,25 @@
                                 we can help you achieve your goals.
                             </p>
                         </div>
-
                     </div>
                 </div>
             </section>
             <!-- Signup-->
             <section class="signup-section" id="signup">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <u><h2 class="text-white mb-4 text-center ">CONTACT US</h2></u>
+                <div class="container px-4 px-lg-5">
+                    <div class="row gx-4 gx-lg-5 justify-content-center">
+                        <div class="col-lg-8">
+                            <h2 class="text-white mb-4 text-center">BOOK A MEETING</h2>
+                            <p class="text-white-50 text-center">
+                                we hope you find a suitable time.
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <!-- Calendly inline widget begin -->
-                <div class="calendly-inline-widget"
-                    data-url="https://calendly.com/mr-revsalt/30min?hide_gdpr_banner=1&background_color=050505&text_color=ffffff&primary_color=767777"
-                    style="width:100%;height:900px;"></div>
-                <script type="text/javascript"
-                    src="https://assets.calendly.com/assets/external/widget.js"
-                    async></script>
-                <!-- Calendly inline widget end -->
+<!-- Calendly inline widget begin -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/ohsmedia/booking-meetings?background_color=0a0a0a&text_color=fdf8f8&primary_color=717272" style="width:100%;height:900px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<!-- Calendly inline widget end -->
             </section>
             <!-- Footer-->
             <footer class="footer bg-black small text-center text-white-50">
@@ -101,12 +101,4 @@
             <script src="js/scripts.js"></script>
             <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
         </body>
-
-        <style>
-            .verticalLine {
-              border-left: 4px solid #ffffff82;
-              height: 200px;
-            }
-          </style>
-
     </html>
