--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="container" style="height: 200px"> </div>
             </header>
             <!-- Projects-->
-            <section class="projects-section" style="background-color: grey;" id="about">
+            <section class="projects-section" style="background-color: rgb(41, 41, 41);" id="about">
                 <!-- Featured Project Row-->
                 <div class="container px-4 px-lg-5">
                     <div class="row gx-4 gx-lg-5 justify-content-center">
