--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
-    <body id="page-top" style="overflow-x: hidden; ">
+    <body id="page-top" style="overflow-x: hidden; background-color: black; ">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top"
             id="mainNav">
-            <div class="container px-4 px-lg-5">
+            <div class="container">
                 <a class="navbar-brand" href="#page-top"><img src="assets/logo_clear.png" style="width: 80px;"></a>
                 <button class="navbar-toggler navbar-toggler-right"
                     type="button" data-bs-toggle="collapse"
@@ -38,6 +38,7 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                     </ul>
                 </div>
             </div>
@@ -46,27 +47,49 @@
         <header class="bg-black">
             <div class="container" style="height: 200px"> </div>
             <center>
-                <video autoplay muted loop id="myVideo" style="width: 20%;"
+                <video autoplay muted loop defaultmuted playsinline id="myVideo" style="width: 20%;"
                     class="OHSLogoVideo">
                     <source src="assets/video.mp4" type="video/mp4">
                 </center>
                 <div class="container" style="height: 200px"> </div>
             </header>
             <!-- Projects-->
-            <section class="projects-section" style="background-color: rgb(41, 41, 41);" id="about">
+            <section class="projects-section" style="background-color: rgb(44, 44, 44);" id="services">
                 <!-- Featured Project Row-->
-                <div class="container px-4 px-lg-5">
-                    <div class="row gx-4 gx-lg-5 justify-content-center">
-                        <div class="col-md-6 ">
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <h2 class="text-white mb-4">SERVICES PROVIDED</h2>
+                            <p class="text-white-50">
+                                <ul style="color: rgba(255, 255, 255, 0.692); margin-left: -10px;">
+                                    <li>Channel-specific social media services</li>
+                                    <li>Strategy planning</li>
+                                    <li>Account/profile creation and branding</li>
+                                    <li>Content creation</li>
+                                    <li>Content publishing</li>
+                                    <li>Research and analysis</li>
+                                    <li>Education and consulting</li>
+                                    <li>Campaign and community management</li>
+                                </ul>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="projects-section" style="background-color: rgb(19, 18, 18);" id="about">
+                <!-- Featured Project Row-->
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
                             <img src="assets/logo.jpg" class="img-thumbnail" style="margin-bottom: 50px;">
                         </div>
                         <div class="col-md-6">
                             <h2 class="text-white mb-4">ABOUT US</h2>
                             <p class="text-white-50">
                                 We are a digital marketing agency who specialize
-                                in ...
-                                we've worked with many clients like ..
-                                we can help you achieve your goals.
+                                in high quality marketing , production and
+                                we've worked with many clients,
+                                we can help you achieve your goals in the hightest quality possible.
                             </p>
                         </div>
                     </div>
@@ -91,7 +114,7 @@
             </section>
             <!-- Footer-->
             <footer class="footer bg-black small text-center text-white-50">
-                <div class="container px-4 px-lg-5"> All copyrights &copy;
+                <div class="container"> All copyrights &copy;
                     reserved to OHS 2023</div>
             </footer>
             <!-- Bootstrap core JS-->
