--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     </head>
     <body id="page-top" style="overflow-x: hidden; background-color: black; ">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top"
+        <nav class=" py-lg-0 navbar navbar-expand-lg navbar-light fixed-top py-0"
             id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="assets/logo_clear.png" style="width: 80px;"></a>
+                <a class="navbar-brand py-0" href="#page-top"><img src="assets/logo_clear.png" style="width: 80px;"></a>
                 <button class="navbar-toggler navbar-toggler-right"
                     type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarResponsive"
